<resources>
    <string name="app_name">Chirp Live!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="twitter_login_label">Connect with Twitter</string>

    <string name="base_url">https://api.twitter.com/1.1/</string>
    <string name="action_sign_in_as_guest">Sign in as Guest</string>
    <string name="no_clue_where_you_are">I have no clue where you are!!!</string>
    <string name="message_hint">Say something...</string>
    <string name="send">Send</string>
    <string name="profile_neighbor">Neighbor Pic</string>

    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Others profile pic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="reset_password">Reset Password</string>
</resources>
